--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ array-init = "0.1.1"
 rand = "0.7.3"
 serde_json = "1.0.44"
 serde = "1.0.104"
+tungstenite = "0.9.2"
 
 [dependencies.pyo3]
 version = "0.8.5"
