--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = "1.0.44"
 tungstenite = "0.9.2"
 dict_derive = "0.2.0"
 native-tls = "0.2.3"
+typenum = "1.11.2"
 
 [dependencies.serde]
 version = "1.0.104"
