--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tungstenite = "0.9.2"
 dict_derive = "0.2.0"
 native-tls = "0.2.3"
 typenum = "1.11.2"
+ratelimit_meter = "5.0.0"
 
 [dependencies.serde]
 version = "1.0.104"
