--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ native-tls = "0.2.3"
 typenum = "1.11.2"
 ratelimit_meter = "5.0.0"
 simple-error = "0.2.1"
+bit-set = "0.5.2"
 
 [dependencies.serde]
 version = "1.0.104"
