--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rand = "0.7.3"
 serde_json = "1.0.44"
 tungstenite = "0.9.2"
 dict_derive = "0.2.0"
-native-tls = "0.2.3"
+native-tls = { version = "0.2.3", features = ["vendored"] }
 typenum = "1.11.2"
 ratelimit_meter = "5.0.0"
 simple-error = "0.2.1"
@@ -38,9 +38,9 @@ bit-set = "0.5.2"
 version = "1.0.104"
 features = ["derive"]
 
-[dependencies.pyo3]
-version = "0.8.5"
-features = ["extension-module"]
+# [dependencies.pyo3]
+# version = "0.8.5"
+# features = ["extension-module"]
 
 [dependencies.rusqlite]
 version = "0.21.0"
