--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,15 @@ lto = true
 array-init = "0.1.1"
 rand = "0.7.3"
 serde_json = "1.0.44"
-tungstenite = "0.9.2"
-native-tls = { version = "0.2.3", features = ["vendored"] }
+async-tungstenite = "0.14.0"
 ratelimit_meter = "5.0.0"
 simple-error = "0.2.1"
+async-std = "1.8"
+async-rustls = "0.2.0"
+futures-util = "0.3.17"
+rustls-acme = "0.1.7"
+simple_logger = "1.13.0"
+log = "0.4.14"
 
 [dependencies.serde]
 version = "1.0.104"
