--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,12 @@ simple-error = "0.2"
 simple_logger = "1.13"
 log = "0.4"
 arc-cell = "0.1"
+rusqlite_migration = "1.0.2"
 
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
 
 [dependencies.rusqlite]
-version = "0.21"
+version = "0.29"
 features = ["bundled"]
